--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Product Viewer</title>
-    <link rel="stylesheet" href="public/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -13,6 +13,6 @@
     <main>
       <div id="product-container"></div>
     </main>
-    <script src="public/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
