--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>TokPed 🐒</h1>
+      <h1>TokPed 🐉</h1>
     </header>
     <main>
       <div id="product-container"></div>
